--- a/SWESection/pom.xml
+++ b/SWESection/pom.xml
@@ -14,24 +14,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
-		<dependency>
-      <groupId>com.microsoft.sqlserver</groupId>
-      <artifactId>mssql-jdbc</artifactId>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
+			
+	 <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.junit.vintage</groupId>
-          <artifactId>junit-vintage-engine</artifactId>
-        </exclusion>
-      </exclusions>
-   	 </dependency>	
-
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+	
 
 	<dependency>
       <groupId>com.microsoft.sqlserver</groupId>
@@ -50,5 +38,14 @@
       </exclusions>
     </dependency>
   </dependencies>
+  
+<build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
